--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="styles/desktop.css" media="screen and (min-width: 768px)"> 
-    <link rel="stylesheet" href="styles/mobile.css" media="screen and (max-width: 767px)"> 
-    <title>Document</title>
+  <meta charset="utf-8">
+  <title>AirBnBdart - Logements étudiants ESTIA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-</body>
-</html>
+  <!-- En-tête du site -->
+  <header>
+    <div id="logo">AirBnBdart</div>
+    <nav aria-label="Navigation principale">
+      <ul>
+        <li><a href="#recherche">Recherche</a></li>
+        <li><a href="#annonces-a-la-une">Annonces à la une</a></li>
+        <li><a href="#meilleurs-resultats">Résultats</a></li>
+      </ul>
+    </nav>
+    <form action="#" method="get">
+      <label for="top-search">Rechercher</label>
+      <input id="top-search" name="q" type="search" />
+      <button type="submit">OK</button>
+    </form>
+    <button type="button">Notifications</button>
+    <button type="button">Profil</button>
+  </header>
