--- a/index.html
+++ b/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>AirBnBdart - Logements étudiants ESTIA</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnBdart - Trouver votre logement étudiant</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- En-tête du site -->
-  <header>
-    <div id="logo">AirBnBdart</div>
-    <nav aria-label="Navigation principale">
-      <ul>
-        <li><a href="#recherche">Recherche</a></li>
-        <li><a href="#annonces-a-la-une">Annonces à la une</a></li>
-        <li><a href="#meilleurs-resultats">Résultats</a></li>
-      </ul>
-    </nav>
-    <form action="#" method="get">
-      <label for="top-search">Rechercher</label>
-      <input id="top-search" name="q" type="search" />
-      <button type="submit">OK</button>
-    </form>
-    <button type="button">Notifications</button>
-    <button type="button">Profil</button>
-  </header>
+    </body>
+</html>
