passage de la page 1 a la page 2

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <input type="checkbox">
                         Accepter de recevoir des notifications
                     </label>
-                    <button type="submit" class="btn submit">Valider</button>
+                    <a href="page-b.html" class="btn btn-valider">Valider</a>
                 </div>
             </section>
 
