--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="annonce-card-horizontal">
                         <div class="annonce-image-placeholder">Annonce 1</div>
                         <div class="annonce-details">
-                            <p class="annonce-text">Texte descriptif de l'annonce, court ou long, simulé ici pour l'exemple.</p>
+                            <p class="annonce-text">Studio lumineux à deux pas de l’ESTIA, entièrement meublé avec coin bureau, kitchenette équipée et salle de bain privative. Idéal pour un étudiant souhaitant un espace calme et fonctionnel pour réviser et se détendre.</p>
                             <button class="btn btn-voir-annonce">Voir l'annonce</button>
                         </div>
                     </div>
