--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="annonce-card-horizontal">
                         <div class="annonce-image-placeholder">Annonce 2</div>
                         <div class="annonce-details">
-                            <p class="annonce-text">Texte descriptif de l'annonce, court ou long, simulé ici pour l'exemple.</p>
+                            <p class="annonce-text">Chambre étudiante dans une colocation conviviale, avec grand salon commun, cuisine équipée et balcon. Le logement est proche des transports, des commerces et dispose d’une connexion internet haut débit incluse.</p>
                             <button class="btn btn-voir-annonce">Voir l'annonce</button>
                         </div>
                     </div>
