--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="annonce-card-horizontal">
                         <div class="annonce-image-placeholder">Annonce 3</div>
                         <div class="annonce-details">
-                            <p class="annonce-text">Texte descriptif de l'annonce, court ou long, simulé ici pour l'exemple.</p>
+                            <p class="annonce-text">Petit appartement moderne avec pièce de vie ouverte, lit mezzanine et nombreux rangements. Situé dans un quartier tranquille, il offre un accès rapide au campus et un environnement propice au travail.</p>
                             <button class="btn btn-voir-annonce">Voir l'annonce</button>
                         </div>
                     </div>
