--- a/page-b.html
+++ b/page-b.html
@@ -23,7 +23,7 @@
                 <div class="annonce-card-vertical">
                     <div class="annonce-image-placeholder">Annonce 1</div>
                     <div class="annonce-details-vertical">
-                        <p class="annonce-text-multiline">Texte descriptif de l'annonce, multiligne, simulé ici pour l'exemple.</p>
+                        <p class="annonce-text-multiline">Exceptionnel appartement T1 (30m²) avec une petite vue sur l'océan Atlantique. Profitez du cadre relaxant après vos journées de cours. Entièrement meublé et équipé. Contrat de location étudiant (septembre à mai), parfait pour un cycle scolaire. Caution réduite..</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
                     </div>
                 </div>
