--- a/page-b.html
+++ b/page-b.html
@@ -31,7 +31,7 @@
                 <div class="annonce-card-vertical">
                     <div class="annonce-image-placeholder">Annonce 2</div>
                     <div class="annonce-details-vertical">
-                        <p class="annonce-text-multiline">Texte descriptif de l'annonce, multiligne, simulé ici pour l'exemple.</p>
+                        <p class="annonce-text-multiline">Grand appartement T2 (45m²) entièrement refait à neuf, parfait pour une colocation étudiante. Une chambre séparée, cuisine ouverte sur salon spacieux. Situé à 10 minutes à pied du centre de Bidart et des arrêts de bus. Stationnement facile. Disponible immédiatement pour l'année scolaire.</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
                     </div>
                 </div>
