--- a/page-b.html
+++ b/page-b.html
@@ -44,7 +44,7 @@
                 <div class="annonce-card-vertical">
                     <div class="annonce-image-placeholder">Annonce 1</div>
                     <div class="annonce-details-vertical">
-                        <p class="annonce-text-multiline">Texte descriptif de l'annonce, multiligne, simulé ici pour l'exemple.</p>
+                        <p class="annonce-text-multiline">Idéalement situé dans un quartier calme de Bidart, à seulement 5 minutes en vélo du campus ESTIA. Ce studio moderne de 25m² offre un grand balcon exposé sud et inclut l'accès à la fibre optique pour vos cours et votre divertissement. Cuisine équipée et salle de bain neuve. Loyer tout compris (charges et internet).</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
                     </div>
                 </div>
