--- a/page-b.html
+++ b/page-b.html
@@ -52,7 +52,7 @@
                 <div class="annonce-card-vertical">
                     <div class="annonce-image-placeholder">Annonce 2</div>
                     <div class="annonce-details-vertical">
-                        <p class="annonce-text-multiline">Texte descriptif de l'annonce, multiligne, simulé ici pour l'exemple.</p>
+                        <p class="annonce-text-multiline">Charmante chambre indépendante (15m²) avec kitchenette et douche privatives, idéale pour un étudiant seul recherchant un loyer modéré. Accès à un jardin commun. Situé à la limite entre Bidart et Biarritz, bien desservi par les transports. Chauffage inclus dans les charges.</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
                     </div>
                 </div>
