--- a/page-b.html
+++ b/page-b.html
@@ -21,7 +21,7 @@
             <h2>Meilleurs résultats :</h2>
             <div class="annonces-container">
                 <div class="annonce-card-vertical">
-                    <div class="annonce-image-placeholder">Annonce 1</div>
+                    <div class="annonce-image-placeholder">Appartement de Charme - Vue Océan - Contrat 9 mois</div>
                     <div class="annonce-details-vertical">
                         <p class="annonce-text-multiline">Exceptionnel appartement T1 (30m²) avec une petite vue sur l'océan Atlantique. Profitez du cadre relaxant après vos journées de cours. Entièrement meublé et équipé. Contrat de location étudiant (septembre à mai), parfait pour un cycle scolaire. Caution réduite..</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
