--- a/page-b.html
+++ b/page-b.html
@@ -42,7 +42,7 @@
             <h2>Ces annonces pourraient aussi vous plaire :</h2>
             <div class="annonces-container">
                 <div class="annonce-card-vertical">
-                    <div class="annonce-image-placeholder">Annonce 1</div>
+                    <div class="annonce-image-placeholder"><strong>Studio Lumineux - 5 min ESTIA & Fibre Optique</strong> </div>
                     <div class="annonce-details-vertical">
                         <p class="annonce-text-multiline">Idéalement situé dans un quartier calme de Bidart, à seulement 5 minutes en vélo du campus ESTIA. Ce studio moderne de 25m² offre un grand balcon exposé sud et inclut l'accès à la fibre optique pour vos cours et votre divertissement. Cuisine équipée et salle de bain neuve. Loyer tout compris (charges et internet).</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="annonce-card-vertical">
-                    <div class="annonce-image-placeholder">Annonce 2</div>
+                    <div class="annonce-image-placeholder"><strong>Petite Chambre Meublée Indépendante - Faible Budget</strong></div>
                     <div class="annonce-details-vertical">
                         <p class="annonce-text-multiline">Charmante chambre indépendante (15m²) avec kitchenette et douche privatives, idéale pour un étudiant seul recherchant un loyer modéré. Accès à un jardin commun. Situé à la limite entre Bidart et Biarritz, bien desservi par les transports. Chauffage inclus dans les charges.</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
