image estia html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 </div>
             </nav>
         </div>
+        <div class="header-image">
+            <img src="image/header.jpg" alt="Image de présentation du site">
+        </div>
     </header>
 
     <main class="container">
