ajout images annonces

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 
                 <div class="annonce-list">
                     <article class="annonce-card-horizontal">
-                        <div class="annonce-image-placeholder">
-                            <span>Annonce 1</span>
+                        <div class="annonce-image">
+                            <img src="images/annonce1.jpg" alt="Photo de l'annonce 1">
                         </div>
                         <div class="annonce-details">
                             <h3 class="annonce-titre">Studio près de l’ESTIA</h3>
@@ -103,8 +103,8 @@
                     </article>
 
                     <article class="annonce-card-horizontal">
-                        <div class="annonce-image-placeholder">
-                            <span>Annonce 2</span>
+                        <div class="annonce-image">
+                            <img src="images/annonce2.jpg" alt="Photo de l'annonce 2">
                         </div>
                         <div class="annonce-details">
                             <h3 class="annonce-titre">Colocation conviviale</h3>
@@ -116,8 +116,8 @@
                     </article>
 
                     <article class="annonce-card-horizontal">
-                        <div class="annonce-image-placeholder">
-                            <span>Annonce 3</span>
+                        <div class="annonce-image">
+                            <img src="images/annonce3.jpg" alt="Photo de l'annonce 3">
                         </div>
                         <div class="annonce-details">
                             <h3 class="annonce-titre">Appartement moderne</h3>
