--- a/page-b.html
+++ b/page-b.html
@@ -22,6 +22,9 @@
             <div class="annonces-container">
                 <div class="annonce-card-vertical">
                     <div class="annonce-image-placeholder"><strong>Appartement de Charme - Vue Océan - Contrat 9 mois</strong></div>
+                    <div class="annonce-image">
+                        <img src="images/annonce4.jpg" alt="Photo de l'annonce 4">
+                    </div>
                     <div class="annonce-details-vertical">
                         <p class="annonce-text-multiline">Exceptionnel appartement T1 (30m²) avec une petite vue sur l'océan Atlantique. Profitez du cadre relaxant après vos journées de cours. Entièrement meublé et équipé. Contrat de location étudiant (septembre à mai), parfait pour un cycle scolaire. Caution réduite..</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
@@ -30,6 +33,9 @@
 
                 <div class="annonce-card-vertical">
                     <div class="annonce-image-placeholder"><strong>T2 Rénové en Colocation - Proche Commerces</strong></div>
+                    <div class="annonce-image">
+                        <img src="images/annonce5.jpg" alt="Photo de l'annonce 5">
+                    </div>
                     <div class="annonce-details-vertical">
                         <p class="annonce-text-multiline">Grand appartement T2 (45m²) entièrement refait à neuf, parfait pour une colocation étudiante. Une chambre séparée, cuisine ouverte sur salon spacieux. Situé à 10 minutes à pied du centre de Bidart et des arrêts de bus. Stationnement facile. Disponible immédiatement pour l'année scolaire.</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
@@ -43,6 +49,9 @@
             <div class="annonces-container">
                 <div class="annonce-card-vertical">
                     <div class="annonce-image-placeholder"><strong>Studio Lumineux - 5 min ESTIA & Fibre Optique</strong> </div>
+                    <div class="annonce-image">
+                        <img src="images/annonce6.jpg" alt="Photo de l'annonce 6">
+                    </div>
                     <div class="annonce-details-vertical">
                         <p class="annonce-text-multiline">Idéalement situé dans un quartier calme de Bidart, à seulement 5 minutes en vélo du campus ESTIA. Ce studio moderne de 25m² offre un grand balcon exposé sud et inclut l'accès à la fibre optique pour vos cours et votre divertissement. Cuisine équipée et salle de bain neuve. Loyer tout compris (charges et internet).</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
@@ -51,6 +60,9 @@
 
                 <div class="annonce-card-vertical">
                     <div class="annonce-image-placeholder"><strong>Petite Chambre Meublée Indépendante - Faible Budget</strong></div>
+                    <div class="annonce-image">
+                        <img src="images/annonce7.jpg" alt="Photo de l'annonce 7">
+                    </div>
                     <div class="annonce-details-vertical">
                         <p class="annonce-text-multiline">Charmante chambre indépendante (15m²) avec kitchenette et douche privatives, idéale pour un étudiant seul recherchant un loyer modéré. Accès à un jardin commun. Situé à la limite entre Bidart et Biarritz, bien desservi par les transports. Chauffage inclus dans les charges.</p>
                         <button class="btn btn-voir-annonce">Voir l'annonce</button>
