--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h1 class="logo">AirBnBdart</h1>
 
             <nav class="user-nav">
-                <button class="btn btn-ghost btn-notifications">Notifications</button>
+                <a href="construction.html" class="btn btn-ghost btn-notifications">Notifications</a>
                 <div class="profil-wrapper">
-                    <button class="btn btn-circle btn-primary btn-profil">+</button>
-                    <span class="profil-text">Profil</span>
+                    <a href="construction.html" class="btn btn-circle btn-primary btn-profil">+
+                    <span class="profil-text">Profil</span></a>
                 </div>
             </nav>
         </div>
@@ -91,40 +91,40 @@
                 <div class="annonce-list">
                     <article class="annonce-card-horizontal">
                         <div class="annonce-image">
-                            <img src="images/annonce1.jpg" alt="Photo de l'annonce 1">
+                            <img src="image/annonce1.jpg" alt="Photo de l'annonce 1">
                         </div>
                         <div class="annonce-details">
                             <h3 class="annonce-titre">Studio près de l’ESTIA</h3>
                             <p class="annonce-text">
                                 Studio lumineux à deux pas de l’ESTIA, entièrement meublé avec coin bureau, kitchenette équipée et salle de bain privative. Idéal pour un étudiant souhaitant un espace calme et fonctionnel pour réviser et se détendre.
                             </p>
-                            <button class="btn btn-outline btn-voir-annonce">Voir l'annonce</button>
+                            <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
                         </div>
                     </article>
 
                     <article class="annonce-card-horizontal">
                         <div class="annonce-image">
-                            <img src="images/annonce2.jpg" alt="Photo de l'annonce 2">
+                            <img src="image/annonce2.jpg" alt="Photo de l'annonce 2">
                         </div>
                         <div class="annonce-details">
                             <h3 class="annonce-titre">Colocation conviviale</h3>
                             <p class="annonce-text">
                                 Chambre étudiante dans une colocation conviviale, avec grand salon commun, cuisine équipée et balcon. Le logement est proche des transports, des commerces et dispose d’une connexion internet haut débit incluse.
                             </p>
-                            <button class="btn btn-outline btn-voir-annonce">Voir l'annonce</button>
+                            <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
                         </div>
                     </article>
 
                     <article class="annonce-card-horizontal">
                         <div class="annonce-image">
-                            <img src="images/annonce3.jpg" alt="Photo de l'annonce 3">
+                            <img src="image/annonce3.jpg" alt="Photo de l'annonce 3">
                         </div>
                         <div class="annonce-details">
                             <h3 class="annonce-titre">Appartement moderne</h3>
                             <p class="annonce-text">
                                 Petit appartement moderne avec pièce de vie ouverte, lit mezzanine et nombreux rangements. Situé dans un quartier tranquille, il offre un accès rapide au campus et un environnement propice au travail.
                             </p>
-                            <button class="btn btn-outline btn-voir-annonce">Voir l'annonce</button>
+                            <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
                         </div>
                     </article>
                 </div>
