--- a/construction.html
+++ b/construction.html
@@ -6,8 +6,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
+
+    <header class="header">
+        <div class="header-container">
+            <a href="index.html" class="btn btn-back">⬅️ Retour à la recherche</a>
+            <h1 class="logo">AirBnBdart</h1>
+        </div>
+    </header>
+
     <h1>Site en construction...</h1>
     <img src="image/construction.jpg" alt="Site en construction">
     <p>Cette fonctionnalité sera bientôt disponible.</p>
+
 </body>
 </html>
