--- a/index.html
+++ b/index.html
@@ -89,43 +89,37 @@
                 <h2 class="card-title">Annonces à la une</h2>
                 
                 <div class="annonce-list">
-                    <article class="annonce-card-horizontal">
+                    <article class="annonce-card">
                         <div class="annonce-image">
                             <img src="image/annonce1.jpg" alt="Photo de l'annonce 1">
                         </div>
-                        <div class="annonce-details">
-                            <h3 class="annonce-titre">Studio près de l’ESTIA</h3>
-                            <p class="annonce-text">
-                                Studio lumineux à deux pas de l’ESTIA, entièrement meublé avec coin bureau, kitchenette équipée et salle de bain privative. Idéal pour un étudiant souhaitant un espace calme et fonctionnel pour réviser et se détendre.
-                            </p>
-                            <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
-                        </div>
+                        <h3 class="annonce-titre">Studio près de l’ESTIA</h3>
+                        <p class="annonce-text">
+                            Studio lumineux à deux pas de l’ESTIA, entièrement meublé avec coin bureau, kitchenette équipée et salle de bain privative. Idéal pour un étudiant souhaitant un espace calme et fonctionnel pour réviser et se détendre.
+                        </p>
+                        <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
                     </article>
 
-                    <article class="annonce-card-horizontal">
+                    <article class="annonce-card">
                         <div class="annonce-image">
                             <img src="image/annonce2.jpg" alt="Photo de l'annonce 2">
                         </div>
-                        <div class="annonce-details">
-                            <h3 class="annonce-titre">Colocation conviviale</h3>
-                            <p class="annonce-text">
-                                Chambre étudiante dans une colocation conviviale, avec grand salon commun, cuisine équipée et balcon. Le logement est proche des transports, des commerces et dispose d’une connexion internet haut débit incluse.
-                            </p>
-                            <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
-                        </div>
+                        <h3 class="annonce-titre">Colocation conviviale</h3>
+                        <p class="annonce-text">
+                            Chambre étudiante dans une colocation conviviale, avec grand salon commun, cuisine équipée et balcon. Le logement est proche des transports, des commerces et dispose d’une connexion internet haut débit incluse.
+                        </p>
+                        <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
                     </article>
 
-                    <article class="annonce-card-horizontal">
+                    <article class="annonce-card">
                         <div class="annonce-image">
                             <img src="image/annonce3.jpg" alt="Photo de l'annonce 3">
                         </div>
-                        <div class="annonce-details">
-                            <h3 class="annonce-titre">Appartement moderne</h3>
-                            <p class="annonce-text">
-                                Petit appartement moderne avec pièce de vie ouverte, lit mezzanine et nombreux rangements. Situé dans un quartier tranquille, il offre un accès rapide au campus et un environnement propice au travail.
-                            </p>
-                            <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
-                        </div>
+                        <h3 class="annonce-titre">Appartement moderne</h3>
+                        <p class="annonce-text">
+                            Petit appartement moderne avec pièce de vie ouverte, lit mezzanine et nombreux rangements. Situé dans un quartier tranquille, il offre un accès rapide au campus et un environnement propice au travail.
+                        </p>
+                        <a href="construction.html" class="btn btn-outline btn-voir-annonce">Voir l'annonce</a>
                     </article>
                 </div>
             </aside>
